Webkit fix for unnecessary scrollbar in selectListbox

--- a/src/main/resources/META-INF/resources/primefaces/forms/forms.css
+++ b/src/main/resources/META-INF/resources/primefaces/forms/forms.css
@@ -18,7 +18,6 @@
 .ui-selectonelistbox, .ui-selectmanymenu {
     overflow:auto;
     padding:2px;
-    position: relative;
     width: 125px;
 }
 
